--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.12.3</version> <!-- Use the version compatible with your Jackson core version -->
+            <version>2.12.3</version>
         </dependency>
 
         <dependency>
@@ -35,8 +35,6 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
-
 
 </project>
